<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".ui.my.MyFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:background="@android:color/darker_gray"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="마이페이지"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="가다가"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="이메일"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="전화번호"
            app:layout_constraintStart_toStartOf="@+id/emailTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="gadaga12@naver.com"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/emailTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailTextView" />

        <TextView
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="010-9337-8641"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/numberTextView"
            app:layout_constraintEnd_toEndOf="@+id/emailText"
            app:layout_constraintTop_toTopOf="@+id/numberTextView" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numberTextView" />

        <LinearLayout
            android:id="@+id/changePasswordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_ripple"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/change_password"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/spacing_normal" />
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/changeAddressContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordContainer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/change_address"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/spacing_normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/manageCardsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changeAddressContainer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/manage_cards"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/spacing_normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/manageCardsContainer" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/logoutContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/logout"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/spacing_normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/leaveContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutContainer">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/leave"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/darker_gray"
                android:padding="@dimen/spacing_normal" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leaveContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
